@@ -2,6 +2,9 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form string="Inventory Line" col="4">
+    <label name="inventory"/>
+    <field name="inventory"/>
+    <newline/>
     <label name="product"/>
     <field name="product"/>
     <label name="uom"/>
@@ -11,9 +14,5 @@ this repository contains the full copyright notices and license terms. -->
     <field name="expected_quantity"/>
     <label name="quantity"/>
     <field name="quantity"/>
-    <label name="move"/>
-    <field name="move"/>
-    <label name="inventory"/>
-    <field name="inventory"/>
-    <field name="unit_digits" invisible="1" colspan="4"/>
+    <field name="moves" colspan="4"/>
 </form>
